// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconPencilSolid should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-pencil-solid "
  height={10}
  viewBox="0 0 10 10"
  width={10}
>
  <path
    className="fill-color"
    d="M.5 7.625V9.5h1.875l5.53-5.53-1.876-1.874L.5 7.626zM9.354 2.52c.195-.194.195-.51 0-.704L8.184.646C7.99.45 7.674.45 7.48.646l-.916.915L8.44 3.437l.914-.915z"
    fill="#000000"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPencilSolid should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-pencil-solid test"
  height={150}
  title="title"
  viewBox="0 0 10 10"
  width={160}
>
  <path
    className="fill-color"
    d="M.5 7.625V9.5h1.875l5.53-5.53-1.876-1.874L.5 7.626zM9.354 2.52c.195-.194.195-.51 0-.704L8.184.646C7.99.45 7.674.45 7.48.646l-.916.915L8.44 3.437l.914-.915z"
    fill="123"
  />
</AccessibleSVG>
`;
